--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:padding="@dimen/activity_margin">
 
     <EditText
+        android:id="@+id/notesView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
