--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -2,6 +2,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
                     android:configure="notes.simplemobiletools.com.MyWidgetConfigure"
                     android:initialLayout="@layout/widget"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp">
+                    android:minHeight="30dp"
+                    android:minWidth="30dp"
+                    android:resizeMode="horizontal|vertical">
 </appwidget-provider>
