--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:configure="notes.simplemobiletools.com.MyWidgetConfigure"
+                    android:configure="com.simplemobiletools.notes.MyWidgetConfigure"
                     android:initialLayout="@layout/widget"
                     android:minHeight="30dp"
                     android:minWidth="30dp"
