add About section

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,4 +6,8 @@
         android:icon="@mipmap/check"
         android:title="Save"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/about"
+        android:title="@string/about"
+        app:showAsAction="never"/>
 </menu>
