--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,9 +3,9 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/save"
-        android:icon="@mipmap/check"
-        android:title="Save"
-        app:showAsAction="always"/>
+        android:icon="@mipmap/save"
+        android:title="@string/save"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/about"
         android:title="@string/about"
