make the font brighter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,5 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
-        android:gravity="top"/>
+        android:gravity="top"
+        android:textColor="@color/dark_grey"/>
 </RelativeLayout>
