properly scale up on tablets

--- a/app/src/main/res/layout/widget_config.xml
+++ b/app/src/main/res/layout/widget_config.xml
@@ -62,6 +62,6 @@
         android:paddingRight="@dimen/activity_margin"
         android:text="OK"
         android:textColor="@android:color/white"
-        android:textSize="18sp"/>
+        android:textSize="@dimen/config_text_size"/>
 
 </RelativeLayout>
