--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionBarStyle">@style/AppTheme.ActionBarStyle</item>
         <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:windowBackground">@android:color/black</item>
     </style>
 
     <style name="MyWidgetConfigTheme" parent="@style/AppTheme">
