--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/activity_margin">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/notes_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@null"
         android:gravity="top"
-        android:scrollbars="vertical"/>
+        android:padding="@dimen/activity_margin"/>
 
-</RelativeLayout>
+</ScrollView>
