--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/notes_holder"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/notes_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         android:background="@null"
         android:gravity="top"
-        android:padding="@dimen/activity_margin"
-        android:textSize="@dimen/normal_text_size"/>
+        android:padding="@dimen/activity_margin"/>
 
 </RelativeLayout>
