--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,9 @@
     <dimen name="social_logo">40dp</dimen>
     <dimen name="settings_padding">8dp</dimen>
 
-    <dimen name="tiny_text_size">12sp</dimen>
+    <dimen name="small_text_size">12sp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
+    <dimen name="medium_text_size">16sp</dimen>
     <dimen name="large_text_size">18sp</dimen>
     <dimen name="config_text_size">18sp</dimen>
 </resources>
