fix #17, add an Extra large font size

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -4,5 +4,6 @@
         <item>@string/small</item>
         <item>@string/normal</item>
         <item>@string/large</item>
+        <item>@string/extra_large</item>
     </string-array>
 </resources>
