--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="medium_text_size">16sp</dimen>
     <dimen name="large_text_size">18sp</dimen>
+    <dimen name="extra_large_text_size">22sp</dimen>
     <dimen name="config_text_size">18sp</dimen>
 </resources>
