--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/open_note"
+        android:icon="@mipmap/open_note"
+        android:title="@string/share"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/share"
         android:icon="@mipmap/share"
         android:title="@string/share"
