add a Delete note menu item

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,6 +7,10 @@
         android:title="@string/share"
         app:showAsAction="ifRoom"/>
     <item
+        android:id="@+id/delete_note"
+        android:title="@string/delete_note"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/share"
         android:icon="@mipmap/share"
         android:title="@string/share"
