--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,8 @@
 
     <style name="SpinnerItem.DropDownItem" parent="@android:style/Widget.TextView">
         <item name="android:gravity">center_vertical</item>
-        <item name="android:paddingTop">@dimen/settings_padding</item>
-        <item name="android:paddingBottom">@dimen/settings_padding</item>
+        <item name="android:paddingTop">@dimen/normal_padding</item>
+        <item name="android:paddingBottom">@dimen/normal_padding</item>
         <item name="android:paddingLeft">@dimen/activity_margin</item>
         <item name="android:paddingRight">@dimen/activity_margin</item>
     </style>
