--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -60,5 +60,19 @@
             android:layout_height="wrap_content"
             android:text="@string/stetho_text"/>
 
+        <TextView
+            android:id="@+id/license_filepicker_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/activity_margin"
+            android:text="@string/filepicker_title"
+            android:textColor="@color/colorPrimary"/>
+
+        <TextView
+            android:id="@+id/license_filepicker_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/filepicker_text"/>
+
     </LinearLayout>
 </ScrollView>
