add an icon to the Delete menu item

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,6 +8,7 @@
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/delete_note"
+        android:icon="@mipmap/delete"
         android:title="@string/delete_note"
         app:showAsAction="never"/>
     <item
