move the note layout into a fragment file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,50 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/notes_holder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/current_note_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_margin"
-            android:alpha=".6"
-            android:text="@string/current_note"/>
-
-        <TextView
-            android:id="@+id/current_note_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/normal_padding"
-            android:layout_marginRight="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_margin"
-            android:layout_toRightOf="@+id/current_note_label"
-            android:alpha=".6"/>
-
-        <ScrollView
-            android:id="@+id/notes_scrollview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/current_note_label"
-            android:fillViewport="true">
-
-            <EditText
-                android:id="@+id/notes_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="top"
-                android:inputType="textCapSentences|textMultiLine"
-                android:paddingBottom="@dimen/activity_margin"
-                android:paddingLeft="@dimen/activity_margin"
-                android:paddingRight="@dimen/activity_margin"
-                android:paddingTop="@dimen/activity_margin"/>
-        </ScrollView>
-    </RelativeLayout>
+    <include layout="@layout/fragment_note"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/notes_fab"
