--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -6,29 +6,18 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/current_note_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_margin"
-        android:layout_marginTop="@dimen/activity_margin"
-        android:alpha=".6"
-        android:text="@string/current_note"/>
-
-    <TextView
         android:id="@+id/current_note_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/normal_padding"
+        android:layout_marginLeft="@dimen/activity_margin"
         android:layout_marginRight="@dimen/activity_margin"
-        android:layout_marginTop="@dimen/activity_margin"
-        android:layout_toRightOf="@+id/current_note_label"
         android:alpha=".6"/>
 
     <ScrollView
         android:id="@+id/notes_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/current_note_label"
+        android:layout_below="@+id/current_note_title"
         android:fillViewport="true">
 
         <EditText
