--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,12 +25,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/normal_padding"
+                android:paddingStart="@dimen/normal_padding"
                 android:text="@string/dark_theme"/>
 
             <android.support.v7.widget.SwitchCompat
                 android:id="@+id/settings_dark_theme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:background="@null"
                 android:clickable="false"/>
@@ -53,12 +55,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/normal_padding"
+                android:paddingStart="@dimen/normal_padding"
                 android:text="@string/note_font_size"/>
 
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/settings_font_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:entries="@array/font_sizes"/>
 
@@ -80,12 +84,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/normal_padding"
+                android:paddingStart="@dimen/normal_padding"
                 android:text="@string/gravity"/>
 
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/settings_gravity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:entries="@array/gravity"/>
 
@@ -107,12 +113,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/normal_padding"
+                android:paddingStart="@dimen/normal_padding"
                 android:text="@string/widget_note"/>
 
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/settings_widget_note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"/>
 
         </RelativeLayout>
