--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,7 @@
 
     <style name="SpinnerItem" parent="@android:style/Widget.TextView">
         <item name="android:paddingRight">@dimen/activity_margin</item>
+        <item name="android:gravity">end</item>
     </style>
 
     <style name="SpinnerItem.DropDownItem" parent="@android:style/Widget.TextView">
