update the Open Note item title

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/open_note"
         android:icon="@mipmap/open_note"
-        android:title="@string/share"
+        android:title="@string/open_note"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/rename_note"
