--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -36,10 +36,20 @@
             android:text="@string/email"/>
 
         <TextView
-            android:id="@+id/about_invite"
+            android:id="@+id/about_more_apps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/about_email"
+            android:paddingBottom="@dimen/activity_margin"
+            android:paddingTop="@dimen/activity_margin"
+            android:text="@string/more_apps_underlined"
+            android:textColor="@color/colorPrimary"/>
+
+        <TextView
+            android:id="@+id/about_invite"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/about_more_apps"
             android:paddingBottom="@dimen/activity_margin"
             android:paddingTop="@dimen/activity_margin"
             android:text="@string/invite_friends_underlined"
@@ -66,10 +76,20 @@
             android:textColor="@color/colorPrimary"/>
 
         <TextView
-            android:id="@+id/about_follow_us"
+            android:id="@+id/about_donate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/about_license"
+            android:paddingBottom="@dimen/activity_margin"
+            android:paddingTop="@dimen/activity_margin"
+            android:text="@string/donate_underlined"
+            android:textColor="@color/colorPrimary"/>
+
+        <TextView
+            android:id="@+id/about_follow_us"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/about_donate"
             android:paddingBottom="@dimen/social_padding"
             android:paddingTop="@dimen/activity_margin"
             android:text="@string/follow_us"/>
