--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,27 +3,27 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/open_note"
-        android:icon="@mipmap/open_note"
+        android:icon="@drawable/open_note"
         android:title="@string/open_note"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/new_note"
-        android:icon="@mipmap/plus"
+        android:icon="@drawable/ic_plus"
         android:title="@string/new_note"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/rename_note"
-        android:icon="@mipmap/rename"
+        android:icon="@drawable/ic_rename"
         android:title="@string/rename"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/share"
-        android:icon="@mipmap/share"
+        android:icon="@drawable/ic_share"
         android:title="@string/share"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/delete_note"
-        android:icon="@mipmap/delete"
+        android:icon="@drawable/ic_delete"
         android:title="@string/delete_note"
         app:showAsAction="never"/>
     <item
