--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:configure="com.simplemobiletools.notes.activities.WidgetConfigureActivity"
-                    android:initialLayout="@layout/widget"
-                    android:minHeight="110dp"
-                    android:minResizeHeight="40dp"
-                    android:minResizeWidth="40dp"
-                    android:minWidth="110dp"
-                    android:previewImage="@mipmap/widget_preview"
-                    android:resizeMode="horizontal|vertical"/>
+<appwidget-provider
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:configure="com.simplemobiletools.notes.activities.WidgetConfigureActivity"
+    android:initialLayout="@layout/widget"
+    android:minHeight="110dp"
+    android:minResizeHeight="40dp"
+    android:minResizeWidth="40dp"
+    android:minWidth="110dp"
+    android:previewImage="@drawable/img_widget_preview"
+    android:resizeMode="horizontal|vertical"/>
