reuse some resources from the Commons lib

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,7 +15,7 @@
             android:id="@+id/settings_dark_theme_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/normal_padding"
+            android:layout_marginTop="@dimen/medium_margin"
             android:background="?attr/selectableItemBackground"
             android:padding="@dimen/activity_margin">
 
@@ -24,8 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingLeft="@dimen/normal_padding"
-                android:paddingStart="@dimen/normal_padding"
+                android:paddingLeft="@dimen/medium_margin"
+                android:paddingStart="@dimen/medium_margin"
                 android:text="@string/dark_theme"/>
 
             <android.support.v7.widget.SwitchCompat
@@ -43,10 +43,10 @@
             android:id="@+id/settings_font_size_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/normal_padding"
+            android:layout_marginTop="@dimen/medium_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:paddingLeft="@dimen/activity_margin"
-            android:paddingRight="@dimen/normal_padding"
+            android:paddingRight="@dimen/medium_margin"
             android:paddingTop="@dimen/activity_margin">
 
             <TextView
@@ -54,8 +54,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingLeft="@dimen/normal_padding"
-                android:paddingStart="@dimen/normal_padding"
+                android:paddingLeft="@dimen/medium_margin"
+                android:paddingStart="@dimen/medium_margin"
                 android:text="@string/note_font_size"/>
 
             <android.support.v7.widget.AppCompatSpinner
@@ -72,10 +72,10 @@
             android:id="@+id/settings_gravity_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/normal_padding"
+            android:layout_marginTop="@dimen/medium_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:paddingLeft="@dimen/activity_margin"
-            android:paddingRight="@dimen/normal_padding"
+            android:paddingRight="@dimen/medium_margin"
             android:paddingTop="@dimen/activity_margin">
 
             <TextView
@@ -83,8 +83,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingLeft="@dimen/normal_padding"
-                android:paddingStart="@dimen/normal_padding"
+                android:paddingLeft="@dimen/medium_margin"
+                android:paddingStart="@dimen/medium_margin"
                 android:text="@string/gravity"/>
 
             <android.support.v7.widget.AppCompatSpinner
@@ -101,10 +101,10 @@
             android:id="@+id/settings_widget_note_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/normal_padding"
+            android:layout_marginTop="@dimen/medium_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:paddingLeft="@dimen/activity_margin"
-            android:paddingRight="@dimen/normal_padding"
+            android:paddingRight="@dimen/medium_margin"
             android:paddingTop="@dimen/activity_margin">
 
             <TextView
@@ -112,8 +112,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingLeft="@dimen/normal_padding"
-                android:paddingStart="@dimen/normal_padding"
+                android:paddingLeft="@dimen/medium_margin"
+                android:paddingStart="@dimen/medium_margin"
                 android:text="@string/widget_note"/>
 
             <android.support.v7.widget.AppCompatSpinner
