--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,53 +1,5 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="actionBarStyle">@style/AppTheme.ActionBarStyle</item>
-        <item name="android:textSize">@dimen/normal_text_size</item>
-        <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
-        <item name="spinnerDropDownItemStyle">@style/SpinnerItem.DropDownItem</item>
-        <item name="android:spinnerDropDownItemStyle">@style/SpinnerItem.DropDownItem</item>
-    </style>
+    <style name="AppTheme" parent="AppTheme.Base"/>
 
-    <style name="AppTheme.Dark" parent="Theme.AppCompat">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="actionBarStyle">@style/AppTheme.ActionBarStyle</item>
-        <item name="android:textSize">@dimen/normal_text_size</item>
-        <item name="android:windowBackground">@android:color/black</item>
-        <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
-        <item name="spinnerDropDownItemStyle">@style/SpinnerItem.DropDownItem</item>
-        <item name="android:spinnerDropDownItemStyle">@style/SpinnerItem.DropDownItem</item>
-    </style>
-
-    <style name="MyWidgetConfigTheme" parent="@style/AppTheme">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowShowWallpaper">true</item>
-    </style>
-
-    <style name="AppTheme.ActionBarStyle" parent="@style/Base.Widget.AppCompat.ActionBar">
-        <item name="background">@color/colorPrimary</item>
-        <item name="titleTextStyle">@style/AppTheme.ActionBar.TitleTextStyle</item>
-    </style>
-
-    <style name="AppTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">20sp</item>
-    </style>
-
-    <style name="SpinnerItem" parent="@android:style/Widget.TextView">
-        <item name="android:paddingRight">@dimen/activity_margin</item>
-        <item name="android:gravity">end</item>
-    </style>
-
-    <style name="SpinnerItem.DropDownItem" parent="@android:style/Widget.TextView">
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:paddingTop">@dimen/normal_padding</item>
-        <item name="android:paddingBottom">@dimen/normal_padding</item>
-        <item name="android:paddingLeft">@dimen/activity_margin</item>
-        <item name="android:paddingRight">@dimen/activity_margin</item>
-    </style>
 </resources>
