--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/open_note"
-        android:icon="@drawable/open_note"
+        android:icon="@drawable/ic_open_note"
         android:title="@string/open_note"
         app:showAsAction="ifRoom"/>
     <item
